crates/cella-codegen/src/ir/snapshots/cella_codegen__ir__lower__tests__required_vs_optional.snap
---
source: crates/cella-codegen/src/ir/lower.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Server",
            doc: None,
            fields: [
                IrField {
                    name: "host",
                    json_name: "host",
                    doc: None,
                    ty: String,
                    required: true,
                    deprecated: false,
                },
                IrField {
                    name: "port",
                    json_name: "port",
                    doc: None,
                    ty: I64,
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
