crates/cella-codegen/src/ir/snapshots/cella_codegen__ir__lower__tests__simple_struct.snap
---
source: crates/cella-codegen/src/ir/lower.rs
expression: result
---
[
    Struct(
        IrStruct {
            name: "Config",
            doc: None,
            fields: [
                IrField {
                    name: "name",
                    json_name: "name",
                    doc: None,
                    ty: String,
                    required: false,
                    deprecated: false,
                },
                IrField {
                    name: "label",
                    json_name: "label",
                    doc: None,
                    ty: String,
                    required: false,
                    deprecated: false,
                },
            ],
            deny_unknown_fields: false,
            is_all_of: false,
        },
    ),
]
